# NetRedirect-Rust

./: Cargo.toml  netredirect-rust.def
.cargo/: config.toml
.github/workflows/: release.yml
src/: build.rs  lib.rs
